Made changes as suggested by findbugs (config included). Changes included: - No more casting the requestMap from the servlet before it enters TrackerRequestParser - No silly concatenation operation on strings in loops - Proper setting of min and default interval as servlet parameters - (turned off database logging again)